--- a/konferencija.html
+++ b/konferencija.html
@@ -18,20 +18,26 @@
     <div class="grid-x">
       <div class="cell large-12 small-12">
 
-    <nav>
-      <div class="logo">
-        <img src="fotogalerija/fotografije/logo1.png" alt="Logo" >
-      </div>
-      <a href="index.html" >Početna</a>
-      <a href="prijave.html">Prijava</a>
-      <div class="dropdown">
-          <a href="#" class="dropdown-toggle aktivna">Konferencija</a>
-      </div>
-      <a href="sponzori.html">Sponzori</a>
-  </nav>
+        <nav>
+          <div class="logo">
+            <img src="fotogalerija/fotografije/logo1.png" alt="Logo">
+          </div>
+          <div class="menu-icon" onclick="toggleMenu()">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+          <div class="dropdown">
+            <a href="index.html" class="dropdown-toggle aktivna">Početna</a>
+            <a href="prijave.html">Prijave</a>
+            <a class="trenutna" href="konferencija.html">Konferencija</a>
+            <a href="sponzori.html">Sponzori</a>
+          </div>
+        </nav>
  
  
-<section id="sekcija_1">
+<div class="content">
+  <section id="sekcija_1">
     <div class="fotorama" data-width="900px" data-ratio="700/467" data-max-width="100%">
     <img src="fotogalerija/fotografije/ffos.jpg">
     <img src="fotogalerija/fotografije/ffos2.jpg">
@@ -55,14 +61,32 @@
    
 
    
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11174.317905820202!2d18.6809084!3d45.5587844!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ce7a607148fa3%3A0x3f0cc9e48a295957!2sFilozofski%20fakultet%20Osijek!5e0!3m2!1shr!2shr!4v1704890241902!5m2!1shr!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe id="map-iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11174.317905820202!2d18.6809084!3d45.5587844!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ce7a607148fa3%3A0x3f0cc9e48a295957!2sFilozofski%20fakultet%20Osijek!5e0!3m2!1shr!2shr!4v1704890241902!5m2!1shr!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <hr>
 
 <div class="smjestaj">
 
   <h2 id="smjestaj">Smještaj</h2>
+<p>
+  Centar grada <br>
+1.	 <a target="_blank" href ="https://www.booking.com/hotel/hr/xxl-rooms-osijek.hr.html">XXL rooms&spa</a>
+ <br>
+2.	<a target="_blank" href="https://www.booking.com/hotel/hr/lavilla-osijek.hr.html">LaVilla Osijek </a>
+ <br>
+3.	 <a target="_blank" href="https://www.booking.com/hotel/hr/hostel-os.hr.html">Hostel OS</a>
+ <br>
+4.	 <a target="_blank" href="https://www.booking.com/hotel/hr/apartman-saturn.hr.html">Apartman Saturn </a>
+ <br> <br>
+Dalje od centra <br>
+1.	<a target="_blank" href="https://www.booking.com/hotel/hr/apartmani-mursa.hr.html">Apartmani Mursa</a>
+  <br>
+2.	 <a target="_blank" href="https://www.booking.com/hotel/hr/sobe-novi-grad.hr.html">Sobe Novi grad</a>
+ <br>
+3.	<a target="_blank" href="https://www.booking.com/hotel/hr/rooms-fitea.hr.html ">Rooms Fitea</a>
 
+
+</p>
 </div>
 <hr>
 
@@ -107,13 +131,15 @@ Bolt - linkovi za instaliranje aplikacije: <br>
 </div>
 </div>
 </div>
-  <footer>
-        <p>&copy; 2023 InfoDASKA Konferencija</p>
-      
-    
-</footer>
+
 </div>
 
+</div>
+<footer
+<p>&copy; 2023 InfoDASKA Konferencija ( 
+  <a href = "mailto:  infodaska2024@gmail.com"><i style="font-size:20px" class="fa">&#xf0e0;</i> </a>)</p>
+
+</footer>
   <script src="script.js"></script>
 
 
