--- a/sponzori.html
+++ b/sponzori.html
@@ -18,28 +18,36 @@
     <div class="grid-x">
       <div class="cell large-12 small-12">
 
-    <nav>
-      <div class="logo">
-        <img src="fotogalerija/fotografije/logo1.png" alt="Logo">
-      </div>
-      <a href="index.html" >Početna</a>
-      <a href="prijave.html">Prijave</a>
-      <a href="konferencija.html">Konferencija</a>
-      <a href="#" class="aktivna">Sponzori</a>
-  </nav>
+        <nav>
+          <div class="logo">
+            <img src="fotogalerija/fotografije/logo1.png" alt="Logo">
+          </div>
+          <div class="menu-icon" onclick="toggleMenu()">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+          <div class="dropdown">
+            <a href="index.html" class="dropdown-toggle aktivna">Početna</a>
+            <a href="prijave.html">Prijave</a>
+            <a href="konferencija.html">Konferencija</a>
+            <a class="trenutna" href="sponzori.html">Sponzori</a>
+          </div>
+        </nav>
    
   
-
+<div class="content">
+  
 <section id="sekcija_1">
-   <div class="fotorama" data-width="900px" data-ratio="700/467" data-max-width="100%">
-    <img src="fotogalerija/fotografije/ffos.jpg">
-    <img src="fotogalerija/fotografije/ffos2.jpg">
-    <img src="fotogalerija/fotografije/ffos3.jpg">
-    <img src="fotogalerija/fotografije/ffos4.jpg">
-    <img src="fotogalerija/fotografije/osijek.jpg">
-    </div>
+  <div class="fotorama" data-width="900px" data-ratio="700/467" data-max-width="100%">
+   <img src="fotogalerija/fotografije/ffos.jpg">
+   <img src="fotogalerija/fotografije/ffos2.jpg">
+   <img src="fotogalerija/fotografije/ffos3.jpg">
+   <img src="fotogalerija/fotografije/ffos4.jpg">
+   <img src="fotogalerija/fotografije/osijek.jpg">
+   </div>
 </section>
-   
+  
 
 
 
@@ -48,28 +56,29 @@
 
 <div class="sponzori">
 
-    <h2 id="sponzori">Sponzori</h2>
-  
+   <h2 id="sponzori">Sponzori</h2>
+ 
 </div>
 
 
-  <a id="top" href="#" onclick="scrollToTop()">
-    <div class="scroll-to-top">
-      <i class="fa fa-arrow-up"></i>
-    </div>
-  </a>
-  
+ <a id="top" href="#" onclick="scrollToTop()">
+   <div class="scroll-to-top">
+     <i class="fa fa-arrow-up"></i>
+   </div>
+ </a>
+ 
 </div>
 </div>
 </div>
 
-  <footer>
-        <p>&copy; 2023 InfoDASKA Konferencija</p>
-       
-    
+ 
+</div>
+</div>
+<footer
+<p>&copy; 2023 InfoDASKA Konferencija ( 
+  <a href = "mailto:  infodaska2024@gmail.com"><i style="font-size:20px" class="fa">&#xf0e0;</i> </a>)</p>
+
 </footer>
-</div>
-
   <script src="script.js"></script>
 
 </body>
