--- a/konferencija.html
+++ b/konferencija.html
@@ -10,11 +10,10 @@
     <script src="fotogalerija/fotorama.js"></script>
 <link rel="stylesheet" href="fotogalerija/fotorama.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
   <div class="page-container">
-  <div class="grid-container">
     <div class="grid-x">
       <div class="cell large-12 small-12">
 
@@ -28,29 +27,14 @@
             <div class="bar"></div>
           </div>
           <div class="dropdown">
-            <a href="index.html" class="dropdown-toggle aktivna">Početna</a>
+            <a href="index.html">Početna</a>
             <a href="prijave.html">Prijave</a>
             <a class="trenutna" href="konferencija.html">Konferencija</a>
             <a href="sponzori.html">Sponzori</a>
           </div>
         </nav>
- 
- 
-<div class="content">
-  <section id="sekcija_1">
-    <div class="fotorama" data-width="900px" data-ratio="700/467" data-max-width="100%">
-    <img src="fotogalerija/fotografije/ffos.jpg">
-    <img src="fotogalerija/fotografije/ffos2.jpg">
-    <img src="fotogalerija/fotografije/ffos3.jpg">
-    <img src="fotogalerija/fotografije/ffos4.jpg">
-    <img src="fotogalerija/fotografije/osijek.jpg">
-    </div>
-  
-  
-</section>
+        <div class="grid-container">
 
-
-    <hr>
 <div class="lokacija">
   <h2 id="lokacija">Lokacija</h2>
 
