--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <script src="fotogalerija/fotorama.js"></script>
 <link rel="stylesheet" href="fotogalerija/fotorama.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="page-container">
-  <div class="grid-container">
     <div class="grid-x">
       <div class="cell large-12 small-12">
 
@@ -28,7 +26,7 @@
             <div class="bar"></div>
           </div>
           <div class="dropdown">
-            <a href="index.html" class="dropdown-toggle aktivna">Početna</a>
+            <a href="index.html" class="trenutna">Početna</a>
             <a href="prijave.html">Prijave</a>
             <a href="konferencija.html">Konferencija</a>
             <a href="sponzori.html">Sponzori</a>
@@ -36,6 +34,7 @@
         </nav>
 
 
+        <div class="grid-container">
 
 
 <div class="content">
