--- a/konferencija.html
+++ b/konferencija.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InfoDASKA</title>
+    <link rel="shortcut icon" href="fotogalerija/fotografije/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="fotogalerija/fotografije/favicon.png" type="image/x-icon">
+    <link rel="icon" href="fotogalerija/fotografije/favicon1.png" type="image/x-icon">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="fotogalerija/fotorama.js"></script>
 <link rel="stylesheet" href="fotogalerija/fotorama.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
