--- a/index.html
+++ b/index.html
@@ -63,11 +63,17 @@
              na konferenciji, studenti, ali i profesori te drugi posjetitelji, imaju mogućnost razmjenjivati vlastita iskustva kroz 
              izlaganja, radionice, ali i druženja u nešto ležernijem okruženju.
          </p>
-      
+ 
  </div>
- 
- 
- 
+<br>
+<hr>
+<br>
+  <div id="poster">
+    <h1>Poster konferencije</h1>
+    <br>
+      <img src="fotogalerija/fotografije/poster.jpeg" alt="poster">
+  </div>
+ <br>
    <a id="top" href="#" onclick="scrollToTop()">
      <div class="scroll-to-top">
        <i class="fa fa-arrow-up"></i>
