--- a/konferencija.html
+++ b/konferencija.html
@@ -97,18 +97,11 @@ Cijena: do 5 km = 4,00 € <br>
 Svaki naredni kilometar unutar grada 1,00 €
 <br><br>
 Bolt - linkovi za instaliranje aplikacije: <br>
-<a  href="https://play.google.com/store/apps/details?id=ee.mtakso.client&hl=hr&gl=US" target="_blank">Andorid</a> <a href="https://apps.apple.com/hr/app/bolt-zatra%C5%BEi-vo%C5%BEnju/id675033630?l=hr" target="_blank">iOS</a>
+<a  href="https://play.google.com/store/apps/details?id=ee.mtakso.client&hl=hr&gl=US" target="_blank">Android</a> <a href="https://apps.apple.com/hr/app/bolt-zatra%C5%BEi-vo%C5%BEnju/id675033630?l=hr" target="_blank">iOS</a>
 </p>
 </div>
 
-<hr>
 
-  <div class="privola">
-
-  <h2 id="privola">Privola za fotografiranje</h2>
-
-</div>
-<hr>
 
 
   <a id="top" href="#" onclick="scrollToTop()">
