--- a/sponzori.html
+++ b/sponzori.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="hr">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InfoDASKA</title>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="fotogalerija/fotografije/favicon.ico" type="image/x-icon">
     <link rel="icon" href="fotogalerija/fotografije/favicon.png" type="image/x-icon">
     <link rel="icon" href="fotogalerija/fotografije/favicon1.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="fotogalerija/fotorama.js"></script>
 <link rel="stylesheet" href="fotogalerija/fotorama.css">
@@ -60,10 +60,9 @@
 
  
 </div>
-</div>
-<footer
+<footer>
 <p>&copy; 2023 InfoDASKA Konferencija ( 
-  <a href = "mailto:  infodaska2024@gmail.com"><i style="font-size:20px" class="fa">&#xf0e0;</i> </a>)</p>
+  <a href = "mailto:infodaska2024@gmail.com"><i style="font-size:20px" class="fa">&#xf0e0;</i> </a>)</p>
 
 </footer>
   <script src="script.js"></script>
